app/assets/stylesheets/darkmode.scss
@import 'variables';

@media (prefers-color-scheme: dark) {

  body,
  footer,
  .intro-section:after,
  .intro {
    background-color: $darkmode-background;
  }

  .name,
  .heading,
  h4,
  h5,
  p,
  body {
    color: white;
  }

  hr {
    border-color: #404040;
  }

  .intro-section {
    background-image: image_url("darkmode-background");
  }
}

